Show players on the online map

--- a/buildSrc/src/main/resources/website/src/app/app.component.css
+++ b/buildSrc/src/main/resources/website/src/app/app.component.css
@@ -1,5 +1,17 @@
 .button-corner {
+	background-color: var(--background-color);
 	position: absolute;
-	right: 2em;
-	bottom: 2em;
+	right: 2rem;
+	bottom: 2rem;
+	width: 3rem;
+	height: 3rem;
+}
+
+::ng-deep .p-accordionheader {
+	padding-left: 0 !important;
+	padding-top: 0 !important;
+}
+
+::ng-deep .p-accordioncontent-content {
+	padding-left: 0 !important;
 }
