--- a/buildSrc/src/main/resources/website/src/app/app.component.html
+++ b/buildSrc/src/main/resources/website/src/app/app.component.html
@@ -15,4 +15,6 @@
 </app-drawer>
 
 <app-map (stationClicked)="onClickStation($event, sideMain, sideStation, sideDirections, sideRoute, false)"/>
-<p-button class="button-corner" icon="pi pi-bars" [rounded]="true" [text]="true" [raised]="true" size="large" (click)="onClickMain(sideMain, sideStation, sideDirections, sideRoute)" pTooltip="Menu" tooltipPosition="left"/>
+<button pButton class="button-corner" [rounded]="true" [text]="true" [raised]="true" size="large" (click)="onClickMain(sideMain, sideStation, sideDirections, sideRoute)" pTooltip="Menu" tooltipPosition="left">
+	<div class="material-icons">menu</div>
+</button>
