--- a/buildSrc/src/main/resources/website/src/styles.scss
+++ b/buildSrc/src/main/resources/website/src/styles.scss
@@ -1,5 +1,3 @@
-@use "primeicons/primeicons.css";
-
 * {
 	font-family: "Noto Sans", "Noto Serif TC", "Noto Serif SC", "Noto Serif JP", "Noto Serif KR", sans-serif;
 	margin: 0;
@@ -47,11 +45,11 @@ html, body {
 }
 
 .gap {
-	gap: 1em;
+	gap: 1rem;
 }
 
 .gap-small {
-	gap: 0.5em;
+	gap: 0.5rem;
 }
 
 .center {
@@ -77,26 +75,26 @@ html, body {
 
 .padding-top-bottom {
 	box-sizing: border-box;
-	padding-top: 1em;
-	padding-bottom: 1em;
+	padding-top: 1rem;
+	padding-bottom: 1rem;
 }
 
 .padding-sides {
 	box-sizing: border-box;
-	padding-left: 1em;
-	padding-right: 1em;
+	padding-left: 1rem;
+	padding-right: 1rem;
 }
 
 .padding-top-bottom-small {
 	box-sizing: border-box;
-	padding-top: 0.5em;
-	padding-bottom: 0.5em;
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
 }
 
 .padding-sides-small {
 	box-sizing: border-box;
-	padding-left: 0.5em;
-	padding-right: 0.5em;
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
 }
 
 .clickable {
@@ -106,4 +104,9 @@ html, body {
 
 .clickable:hover {
 	background: var(--p-button-text-primary-hover-background);
+}
+
+.icon-button {
+	width: 2.5rem;
+	height: 2.5rem;
 }
