--- a/buildSrc/src/main/resources/website/src/app/component/drawer/drawer.component.html
+++ b/buildSrc/src/main/resources/website/src/app/component/drawer/drawer.component.html
@@ -1,3 +1,3 @@
-<p-drawer [header]="title" [modal]="false" [(visible)]="drawerVisible" (onHide)="closed.emit()" position="right" [style]="{ width: '24em' }">
+<p-drawer [header]="title" [modal]="false" [(visible)]="drawerVisible" (onHide)="closed.emit()" position="right" [style]="{ width: '24em', maxWidth: '100%' }">
 	<ng-content/>
 </p-drawer>
