--- a/website/src/styles.scss
+++ b/website/src/styles.scss
@@ -60,15 +60,11 @@ html, body {
 	flex-grow: 1;
 }
 
-.wrapper {
-	overflow: hidden;
-	width: 100%;
-	height: 100%;
+.p-tablist {
+	min-height: 54.2px;
 }
 
-.content {
-	overflow-x: hidden;
-	overflow-y: auto;
+.wrapper, .content {
 	width: 100%;
 	height: 100%;
 }
