Fixed interchange style toggle

--- a/website/src/app/component/interchange-style-toggle/interchange-style-toggle.component.html
+++ b/website/src/app/component/interchange-style-toggle/interchange-style-toggle.component.html
@@ -1,4 +1,4 @@
-<p-select-button [options]="interchangeStyleOptions" [ngModel]="getInterchangeStyle()" (onChange)="setInterchangeStyle($event)">
+<p-select-button [options]="interchangeStyleOptions" [ngModel]="getInterchangeStyle()" (onChange)="setInterchangeStyle($event)" [allowEmpty]="false">
 	<ng-template #item let-item>
 		<div class="material-icons" [pTooltip]="item.tooltip" tooltipPosition="bottom">{{ item.icon }}</div>
 	</ng-template>
